--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-bootstrap-modal": "^4.0.0",
     "react-scripts-ts": "2.13.0"
   },
   "scripts": {
