--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-bootstrap-modal": "^4.0.0",
-    "react-scripts-ts": "2.13.0"
+    "react-scripts-ts": "2.13.0",
+    "react-sound": "^1.1.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
