--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "node-sass-chokidar": "0.0.3",
+    "node-sass-chokidar": "^1.4.0",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-bootstrap-modal": "^4.0.0",
