--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-redux": "^7.2.1",
     "react-test-renderer": "^16.13.0",
     "typescript": "^2.7.1"
   }
